--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ mjx-line{height: 7px !important;}
 .min_d,.min{color:green}
 .max_d,.max{color:red;}
 .answer_d{color:yellow;}
+#alleqs{display:none}
 </style>
 <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
