--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@ $(document).ready(function() {
 });
      document.getElementById('showascii').addEventListener('click', () => {
             var alleqs = document.getElementById('alleqs');
+console.log(333)
 alleqs.style.display="block";
             html2pdf().from(alleqs).save();
  });
