--- a/EEG.html
+++ b/EEG.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>NeuroSky EEG Realtime Chart</title>
-  <button id="downloadButton">Download</button>
+  <button id="amendBuffersAndDownload">PCAP</button>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <style>
