--- a/EEG.html
+++ b/EEG.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>NeuroSky EEG Realtime Chart</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <button id="amendBuffersAndDownload">PCAP</button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <style>
     body {
