--- a/EEG.html
+++ b/EEG.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="module" src="main.js"></script>
   <meta charset="UTF-8">
   <title>NeuroSky EEG Realtime Chart</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
