--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ mjx-line{height: 7px !important;}
             </div>
             <nav>
                 <ul>
-                    <li><a href="#" id="startCharts">Start</a></li>
+                    <li><a href="#" id="#startCharts">Start</a></li>
                     <li><a href="./debo/index.html">Vitals</a></li>
                     <li><a href="https://github.com/lightning417techa/shazamIt">Database</a></li>
                     <li><a href="EEG.html">EEG</a></li>
@@ -431,7 +431,7 @@ mjx-line{height: 7px !important;}
     
     <script id="rendered-js" type="module">
         /** * for documentation and more demos, * visit https://audiomotion.dev */ /* import AudioMotionAnalyzer from 'https://cdn.skypack.dev/audiomotion-analyzer?min'; // instantiate analyzer const audioMotion = new AudioMotionAnalyzer( document.getElementById('container'),
-        { gradient: 'rainbow', height: window.innerHeight - 300, showScaleY: true, showBgColor:true, overlay:true, bgAlpha:0 } ); const micButton = document.getElementById('startCharts'); micButton.addEventListener('click', () => { if (navigator.mediaDevices)
+        { gradient: 'rainbow', height: window.innerHeight - 300, showScaleY: true, showBgColor:true, overlay:true, bgAlpha:0 } ); const micButton = document.getElementById('#startCharts'); micButton.addEventListener('click', () => { if (navigator.mediaDevices)
         { navigator.mediaDevices.getUserMedia({ audio: true, video: false }). then(stream => { // create stream using audioMotion audio context const micStream = audioMotion.audioCtx.createMediaStreamSource(stream); // connect microphone stream to analyzer
         audioMotion.connectInput(micStream); // mute output to prevent feedback loops from the speakers audioMotion.volume = 0; */
 
