--- a/debo/index.html
+++ b/debo/index.html
@@ -83,7 +83,7 @@
     <canvas id="ppgChart"></canvas>
 
     <div class="overlay">
-        ❤️ Heart Rate: <span id="heartRate">--</span> BPM | 🩸 SpO₂: <span id="spo2">--</span>% | 🎵 Sound: <span
+        ❤️ Heart Rate: <span id="heartRate">--</span> BPM | 🩸 SpO₂: <span id="spo2">--</span>% | 🎵 dB: <span
             id="soundLevel">--</span> dB
     </div>
 
