--- a/index.html
+++ b/index.html
@@ -424,7 +424,9 @@ mjx-line{height: 7px !important;}
 <script src="https://cdn.jsdelivr.net/npm/@nasaworldwind/worldwind@0.11.0/build/dist/worldwind.min.js" type="text/javascript"></script>
  <script src="https://cdn.jsdelivr.net/gh/muaz-khan/MultiStreamsMixer/MultiStreamsMixer.js"></script>
     
-    <script src="src/brain.js?v=0"></script>
+
+<script src="pcap-generator.js"></script> 
+<script src="Brain.js"></script> 
     <script src="src/main.js?v=0u" ></script>
     <script src="src/mreal-time-line-chart.js"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
