--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@ mjx-line{height: 7px !important;}
  <script src="https://cdn.jsdelivr.net/gh/muaz-khan/MultiStreamsMixer/MultiStreamsMixer.js"></script>
     
 
-<script src="pcap-generator.js"></script> 
-<script src="Brain.js"></script> 
+<script src="src/pcap-generator.js"></script> 
+<script src="src/brain.js"></script> 
     <script src="src/main.js?v=0u" ></script>
     <script src="src/mreal-time-line-chart.js"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
