--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ mjx-line{height: 7px !important;}
  <script src="https://cdn.jsdelivr.net/gh/muaz-khan/MultiStreamsMixer/MultiStreamsMixer.js"></script>
     
 
-<script src="src/pcap-generator.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/pcap-parser@0.2.1/lib/pcap-parser.min.js"></script> 
 <script src="src/brain.js"></script> 
     <script src="src/main.js?v=0u" ></script>
     <script src="src/mreal-time-line-chart.js"></script>
