--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <body>
   <div class="container">
     <!-- Logo Image -->
-    <img src="C:\Users\yuhama\Downloads\1000012077.jpg" alt="Dynamsoft Logo" class="logo-img">
+    <img src="assets/img/1000012077.jpg" alt="Dynamsoft Logo" class="logo-img">
 
     <!-- Title and Subtitle -->
     <div class="login-title">Login</div>
