--- a/index.html
+++ b/index.html
@@ -275,15 +275,39 @@
     }
 
     // Optional: Log selected files
-    document.getElementById('videoInput').addEventListener('change', e => {
-      const file = e.target.files[0];
-      if (file) console.log("Video selected:", file.name);
+   document.getElementById('imageInput').addEventListener('change', e => {
+    const file = e.target.files[0];
+    if (file && file.type.startsWith("image/")) {
+      const img = document.getElementById('capturedImage');
+      img.src = URL.createObjectURL(file);
+      img.style.display = 'block';
+    }
+  });
+
+  document.getElementById('videoInput').addEventListener('change', e => {
+    const file = e.target.files[0];
+    if (!file || !file.type.startsWith("video/")) return;
+
+    const video = document.createElement('video');
+    video.src = URL.createObjectURL(file);
+    video.muted = true;
+    video.playsInline = true;
+    video.crossOrigin = "anonymous";
+
+    video.addEventListener('loadeddata', () => {
+      const canvas = document.createElement('canvas');
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      canvas.getContext('2d').drawImage(video, 0, 0);
+
+      const imageURL = canvas.toDataURL('image/png');
+      const img = document.getElementById('capturedImage');
+      img.src = imageURL;
+      img.style.display = 'block';
     });
 
-    document.getElementById('imageInput').addEventListener('change', e => {
-      const file = e.target.files[0];
-      if (file) console.log("Image selected:", file.name);
-    });
+    video.load();
+  });
   </script>
 </body>
 </html>
