--- a/login.html
+++ b/login.html
@@ -238,6 +238,8 @@
   </div>
 
   <!-- JavaScript -->
+   <!-- Include Dynamsoft MRZ SDK -->
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-mrz@2.2.10/dist/dbr-mrz.min.js"></script>
   <script>
     const scanWithCameraButton = document.getElementById("mobile-viewscanWithCameraButton");
       const scanWithSampleImgButton = document.getElementById("desktop-view");
