--- a/login.html
+++ b/login.html
@@ -238,7 +238,7 @@
   </div>
 
   <!-- JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-mrz@2.0.11/dist/mrz-scanner.umd.js"></script>
+<script src="dist/mrz-scanner.bundle.js"></script>
   <script>
     const scanWithCameraButton = document.getElementById("mobile-viewscanWithCameraButton");
       const scanWithSampleImgButton = document.getElementById("desktop-view");
