--- a/login.html
+++ b/login.html
@@ -238,7 +238,7 @@
   </div>
 
   <!-- JavaScript -->
-<script src="dist/mrz-scanner.bundle.js"></script>
+<script src="./dist/mrz-scanner.bundle.js"></script>
   <script>
     const scanWithCameraButton = document.getElementById("mobile-viewscanWithCameraButton");
       const scanWithSampleImgButton = document.getElementById("desktop-view");
