--- a/login.html
+++ b/login.html
@@ -240,7 +240,7 @@
   <!-- JavaScript -->
 <script src="./dist/mrz-scanner.bundle.js"></script>
   <script>
-    const scanWithCameraButton = document.getElementById("mobile-viewscanWithCameraButton");
+    const scanWithCameraButton = document.getElementById("scanWithCameraButton");
       const scanWithSampleImgButton = document.getElementById("desktop-view");
       const scanWithGalleryButton = document.getElementById("results-view");
 
