--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <title>Biometric Network</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-mrz@2.1.20/dist/dynamsoft.mrz.min.js"></script>
   <style>
     * { box-sizing: border-box; }
 
@@ -233,7 +234,7 @@
   </div>
 
   <!-- JavaScript -->
-<script src="./dist/mrz-scanner.bundle.js"></script>>
+<script src="./dist/mrz-scanner.bundle.js"></script>
   <script>
     const scanWithCameraButton = document.querySelector(".scan-with-camera");
       const scanWithSampleImgButton = document.querySelector(".scan-with-sample-image");
