--- a/login.html
+++ b/login.html
@@ -224,6 +224,7 @@
       <span><i class="fas fa-image"></i> Scan from your image gallery</span>
       <span class="arrow-circle"><i class="fas fa-arrow-right"></i></span>
     </button>
+    <input type="file" id="initialFile" accept="image/png,image/jpeg" style="display: none" />
 
 
   </div>
