--- a/login.html
+++ b/login.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <title>Biometric Network</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- FontAwesome & MRZ Scanner -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-mrz-scanner@3.0.0/dist/mrz-scanner.bundle.js"></script>
+
+  <!-- Tesseract.js -->
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js"></script>
+
   <style>
     * { box-sizing: border-box; }
-
     html, body {
       margin: 0;
       padding: 0;
@@ -109,11 +114,6 @@
 
     .arrow-circle i {
       font-size: 14px;
-      margin: 0;
-      line-height: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     .btn-orange .arrow-circle i {
@@ -132,27 +132,13 @@
       display: none;
     }
 
-    #cameraStream, #capturedImage {
-      width: 100%;
-      max-width: 340px;
-      margin: 20px auto;
-      border-radius: 8px;
-      display: none;
-    }
-
-    #captureButton {
-      display: none;
-      margin: 10px auto 20px;
-      padding: 10px 20px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
+    #ocr-result {
+      margin-top: 20px;
+      padding: 10px;
+      background: #f7f7f7;
       border-radius: 5px;
-      cursor: pointer;
-    }
-
-    #captureButton:hover {
-      background-color: #45a049;
+      font-size: 14px;
+      white-space: pre-wrap;
     }
 
     .footer {
@@ -198,19 +184,15 @@
 </head>
 <body>
   <div class="container">
-    <!-- Logo -->
     <img src="assets/img/1000012077.jpg" alt="Dynamsoft Logo" class="logo-img">
 
-    <!-- Titles -->
     <div class="login-title">Login</div>
     <div class="subtitle">Scan Insurance Card</div>
 
-    <!-- Hidden File Inputs -->
     <input type="file" id="videoInput" accept="video/*">
     <input type="file" id="imageInput" accept="image/*">
 
-    <!-- Buttons -->
-    <button class="btn btn-orange scan-with-camera" >
+    <button class="btn btn-orange scan-with-camera">
       <span><i class="fas fa-camera"></i> With Live Camera</span>
       <span class="arrow-circle"><i class="fas fa-arrow-right"></i></span>
     </button>
@@ -220,113 +202,100 @@
       <span class="arrow-circle"><i class="fas fa-arrow-right"></i></span>
     </button>
 
-    <button class="btn btn-gray scan-with-image-gallery" >
+    <button class="btn btn-gray scan-with-image-gallery">
       <span><i class="fas fa-image"></i> Scan from your image gallery</span>
       <span class="arrow-circle"><i class="fas fa-arrow-right"></i></span>
     </button>
-    <input type="file" id="initialFile" accept="image/png,image/jpeg" style="display: none" />
 
+    <input type="file" id="initialFile" accept="image/png,image/jpeg" />
 
+    <div id="ocr-result"></div>
   </div>
 
-  <!-- Footer -->
   <div class="footer">
     ©️ Copyright 2025 Master Momar Mbergan
   </div>
 
   <!-- JavaScript -->
-<script src="./dist/mrz-scanner.bundle.js"></script>
   <script>
     const scanWithCameraButton = document.querySelector(".scan-with-camera");
-      const scanWithSampleImgButton = document.querySelector(".scan-with-sample-image");
-      const scanWithGalleryButton = document.querySelector(".scan-with-image-gallery");
+    const scanWithSampleImgButton = document.querySelector(".scan-with-sample-image");
+    const scanWithGalleryButton = document.querySelector(".scan-with-image-gallery");
+    const fileInput = document.getElementById("initialFile");
+    const ocrResultDiv = document.getElementById("ocr-result");
 
-      let result = null;
-      let firstLoad = true;
+    let result = null;
 
     const mrzscanner = new Dynamsoft.MRZScanner({
-        license:
-          "DLS2eyJoYW5kc2hha2VDb2RlIjoiMTA0MzI5ODU4LU1UQTBNekk1T0RVNExYZGxZaTFVY21saGJGQnliMm8iLCJtYWluU2VydmVyVVJMIjoiaHR0cHM6Ly9tZGxzLmR5bmFtc29mdG9ubGluZS5jb20iLCJvcmdhbml6YXRpb25JRCI6IjEwNDMyOTg1OCIsInN0YW5kYnlTZXJ2ZXJVUkwiOiJodHRwczovL3NkbHMuZHluYW1zb2Z0b25saW5lLmNvbSIsImNoZWNrQ29kZSI6MTczNDA3NjY3M30=",
-        resultViewConfig: {
-          toolbarButtonsConfig: {
-            done: {
-              label: "Return Home",
-            },
-          },
-        },
-        scannerViewConfig: {
-          cameraEnhancerUIPath: "./dist/mrz-scanner.ui.html",
-        },
-        templateFilePath: "./dist/mrz-scanner.template.json",
-      });
-
-      // Scan with camera
-      scanWithCameraButton.addEventListener("click", async function () {
-        try {
-          // Launch the scanner and wait for the result
-          result = await mrzscanner.launch();
-          console.log(result);
-
-          detectDeviceAndSetView(); // Return to appropriate view based on device
-        } catch (error) {
-          console.error("Error scanning:", error);
-          detectDeviceAndSetView();
+      license: "DLS2eyJoYW5kc2hha2VDb2RlIjoiMTA0MzI5ODU4LU1UQTBNekk1T0RVNExYZGxZaTFVY21saGJGQnliMm8iLCJtYWluU2VydmVyVVJMIjoiaHR0cHM6Ly9tZGxzLmR5bmFtc29mdG9ubGluZS5jb20iLCJvcmdhbml6YXRpb25JRCI6IjEwNDMyOTg1OCIsInN0YW5kYnlTZXJ2ZXJVUkwiOiJodHRwczovL3NkbHMuZHluYW1zb2Z0b25saW5lLmNvbSIsImNoZWNrQ29kZSI6MTczNDA3NjY3M30=",
+      resultViewConfig: {
+        toolbarButtonsConfig: {
+          done: { label: "Return Home" }
         }
-      });
+      },
+      scannerViewConfig: {
+        cameraEnhancerUIPath: "./dist/mrz-scanner.ui.html",
+      },
+      templateFilePath: "./dist/mrz-scanner.template.json"
+    });
 
-      // Scan with sample image (Passport)
-      scanWithSampleImgButton.addEventListener("click", async function () {
+    // Scan with live camera
+    scanWithCameraButton.addEventListener("click", async function () {
+      try {
+        result = await mrzscanner.launch();
+        console.log("MRZ Result from camera:", result);
+      } catch (error) {
+        console.error("MRZ scan error:", error);
+      }
+    });
 
-        try {
-          // Launch the scanner and wait for the result
-          result = await mrzscanner.launch(null, "virtual1");
-          console.log(result);
+    // Scan with sample image
+    scanWithSampleImgButton.addEventListener("click", async function () {
+      try {
+        result = await mrzscanner.launch(null, "virtual1");
+        console.log("MRZ Result from sample:", result);
+      } catch (error) {
+        console.error("Sample scan error:", error);
+      }
+    });
 
-          detectDeviceAndSetView(); // Return to appropriate view based on device
-        } catch (error) {
-          console.error("Error scanning:", error);
-          detectDeviceAndSetView();
-        }
-      });
+    // Scan from gallery
+    scanWithGalleryButton.addEventListener("click", function () {
+      fileInput.click();
+    });
 
-      const fileInput = document.getElementById("initialFile");
-      // Scan with gallery
-      scanWithGalleryButton.addEventListener("click", function () {
-        fileInput.click();
-      });
-      fileInput.addEventListener("change", async function () {
+    fileInput.addEventListener("change", async function () {
+      const file = this.files[0];
+      if (!file) return;
 
-        const files = Array.from(this.files || []);
+      try {
+        // Launch MRZ scanner
+        result = await mrzscanner.launch(file);
+        console.log("MRZ Result from gallery image:", result);
+      } catch (err) {
+        console.warn("MRZ scan failed, falling back to Tesseract OCR...");
+        runTesseractOCR(file);
+      }
 
-        if (files.length) {
-          try {
-            let fileToProcess = files[0];
+      this.value = "";
+    });
 
-            // Handle PDF conversion if needed
-            if (fileToProcess.type === "application/pdf") {
-              fileToProcess = await convertPDFToImage(fileToProcess);
-            }
-
-            const result = await mrzscanner.launch(fileToProcess);
-          } catch (error) {
-            console.error("Error processing file:", error);
-          }
-        }
-
-        detectDeviceAndSetView();
-        this.value = "";
-      });
-
-      // Desktop proceed button handler
-      desktopProceedButton.addEventListener("click", async function () {
-        desktopView.style.display = "none";
-        mobileView.style.display = "flex";
-
-        firstLoad = false;
-      });
-
-
-    
+    // OCR fallback using Tesseract
+    function runTesseractOCR(file) {
+      const reader = new FileReader();
+      reader.onload = function () {
+        Tesseract.recognize(reader.result, 'eng', {
+          logger: m => console.log(m)
+        }).then(({ data: { text } }) => {
+          console.log("OCR Text:", text);
+          ocrResultDiv.innerText = "OCR Result:\n" + text;
+        }).catch(err => {
+          console.error("Tesseract.js error:", err);
+          ocrResultDiv.innerText = "Failed to extract text via OCR.";
+        });
+      };
+      reader.readAsDataURL(file);
+    }
   </script>
 </body>
 </html>
